syntax = "proto3";

message Test2 {
  int32 test2 = 1;
}
